# flask-users

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
app/: __init__.py  extensions.py
app/config/: config.py
app/models/: __init__.py  user.py
app/routes/: __init__.py  user.py
app/schemas/: __init__.py  user.py
app/static/: swagger.json
tests/: conftest.py  test_users.py
